--- a/src/app/theme/layouts/admin/nav-bar/nav-right/nav-right.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-right/nav-right.component.html
@@ -66,16 +66,19 @@
             </a>
         </div>
     </li>
-    <li>
-        <div class="dropdown drp-user" ngbDropdown placement="auto">
+    <!-- Login -->
+    <li *ngIf="isLoggedIn">
+        <div class="dropdown drp-user" ngbDropdown placement="auto" *ngIf="authService.userData as user">
             <a href="javascript:" ngbDropdownToggle>
-                <img src="assets/images/user/avatar-1.jpg" class="img-radius wid-40" alt="User-Profile-Image" />
+                <img src="{{ (user.photoURL) ? user.photoURL : 'https://lh3.googleusercontent.com/a/ACg8ocKWmSrGjYufaK5Z-qTXfBeewGwG1bRUNdabvHF1a9iBrXk=s96-c' }}"
+                    class="img-radius wid-40" alt="User-Profile-Image" />
             </a>
             <div class="dropdown-menu dropdown-menu-end profile-notification" ngbDropdownMenu>
                 <div class="pro-head">
-                    <img src="assets/images/user/avatar-1.jpg" class="img-radius" alt="User-Profile-Image" />
-                    <span>John Doe</span>
-                    <a href="javascript:" class="dud-logout" title="Logout">
+                    <img src="{{ (user.photoURL) ? user.photoURL : 'https://lh3.googleusercontent.com/a/ACg8ocKWmSrGjYufaK5Z-qTXfBeewGwG1bRUNdabvHF1a9iBrXk=s96-c' }}"
+                        class="img-radius" alt="User-Profile-Image" />
+                    <span>{{ (user.displayName) ? user.displayName : 'USER' }}</span>
+                    <a href="javascript:" (click)="signOut()" class="dud-logout" title="Logout">
                         <i class="feather icon-log-out"></i>
                     </a>
                 </div>
@@ -87,6 +90,11 @@
                     </li>
                 </ul>
             </div>
+        </div>
+    </li>
+    <li *ngIf="!isLoggedIn">
+        <div>
+            <button mat-raised-button routerLink="/auth/sign-in">Signin</button>
         </div>
     </li>
 </ul>
