--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,7 @@ $manage-shop-theme: mat.define-light-theme((
 // icon
 @import 'scss/themes/font/datta-icon';
 @import 'scss/themes/font/feather';
-@import 'scss/themes/font/fontawesome';
+// @import 'scss/themes/font/fontawesome';
 @import 'scss/themes/font/flaticon';
 
 // component
