--- a/src/app/theme/layouts/admin/nav-bar/nav-right/nav-right.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-right/nav-right.component.html
@@ -77,7 +77,9 @@
                 <div class="pro-head">
                     <img src="{{ (user.photoURL) ? user.photoURL : 'https://lh3.googleusercontent.com/a/ACg8ocKWmSrGjYufaK5Z-qTXfBeewGwG1bRUNdabvHF1a9iBrXk=s96-c' }}"
                         class="img-radius" alt="User-Profile-Image" />
-                    <span>{{ (user.displayName) ? user.displayName : 'USER' }}</span>
+                    <span>
+                        {{ (user.displayName) ? user.displayName : (user.email.split('@')[0]) }}
+                    </span>
                     <a href="javascript:" (click)="signOut()" class="dud-logout" title="Logout">
                         <i class="feather icon-log-out"></i>
                     </a>
