--- a/src/app/pages/authentication/sign-up/sign-up.component.html
+++ b/src/app/pages/authentication/sign-up/sign-up.component.html
@@ -3,20 +3,60 @@
         <div class="card">
             <div class="row align-items-center text-center">
                 <div class="col-md-12">
-                    <div class="card-body">
+                    <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()" class="card-body">
                         <img src="assets/images/logo-dark.png" alt="logo" class="img-fluid mb-4" />
                         <h4 class="mb-3 f-w-400">Sign up</h4>
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon2"><i class="feather icon-mail"></i></span>
-                            <input type="email" #email class="form-control" placeholder="Email address"
-                                aria-label="Username" aria-describedby="basic-addon2" />
+
+                        <!-- Email -->
+                        <div class="mb-3">
+                            <div class="input-group mb-1">
+                                <span class="input-group-text"><i class="feather icon-mail"></i></span>
+                                <input type="email" class="form-control" formControlName="email"
+                                    placeholder="Email address" aria-label="Email" />
+                            </div>
+                            <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="alert alert-danger">
+                                <div *ngIf="email?.errors?.['required']">
+                                    Email is required
+                                </div>
+                                <div *ngIf="email?.errors?.['pattern']">
+                                    Email must be a valid email address format
+                                </div>
+                            </div>
                         </div>
-                        <div class="input-group mb-4">
-                            <span class="input-group-text" id="basic-addon3"><i class="feather icon-lock"></i></span>
-                            <input type="password" #password class="form-control" placeholder="Password"
-                                aria-label="Username" aria-describedby="basic-addon3" />
+
+                        <!-- Password -->
+                        <div class="mb-3">
+                            <div class="input-group mb-1">
+                                <span class="input-group-text"><i class="feather icon-lock"></i></span>
+                                <input type="password" class="form-control" formControlName="password"
+                                    placeholder="Password" aria-label="Password" />
+                            </div>
+                            <div *ngIf="password?.invalid && (password?.dirty || password?.touched)"
+                                class="alert alert-danger">
+                                <div *ngIf="password?.errors?.['required']">
+                                    Password is required
+                                </div>
+                                <div *ngIf="password?.errors?.['minlength']">
+                                    Password must be at least 6 characters long.
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group text-start mt-2">
+
+                        <!-- Confirm Password -->
+                        <div class="mb-4">
+                            <div class="input-group mb-1">
+                                <span class="input-group-text"><i class="feather icon-lock"></i></span>
+                                <input type="password" class="form-control" formControlName="confirmPassword"
+                                    placeholder="Confirm Password" aria-label="ConfirmPassword" />
+                            </div>
+                            <div *ngIf="confirmPassword?.invalid && (confirmPassword?.dirty || confirmPassword?.touched)"
+                                class="alert alert-danger">
+                                <div *ngIf="confirmPassword?.errors?.['confirmedValidator']">
+                                    Passwords do not match.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group text-start">
                             <div class="checkbox checkbox-primary d-inline">
                                 <input type="checkbox" name="checkbox-fill-2" id="checkbox-fill-2" />
                                 <label for="checkbox-fill-2" class="cr">Send me the <a href="javascript:"> Newsletter
@@ -24,14 +64,14 @@
                             </div>
                         </div>
                         <div class="d-grid">
-                            <button class="btn btn-primary btn-block mb-4"
-                                (click)="signUp(email.value, password.value)">
+                            <button class="btn btn-primary btn-block mb-4" type="submit"
+                                [disabled]="signUpForm.invalid">
                                 Sign up
                             </button>
                         </div>
                         <p class="mb-2">Already have an account? <a [routerLink]="['/auth/sign-in']"
                                 class="f-w-400">Signin</a></p>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
