--- a/src/app/pages/food/food.component.html
+++ b/src/app/pages/food/food.component.html
@@ -1,38 +1,48 @@
-<div class="mat-elevation-z8 mt-4">
-    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+<app-card cardTitle="Quản lý sản phẩm" [options]="false">
+    <mat-tab-group>
+        <mat-tab label="Danh sách sản phẩm">
+            <div class="mat-elevation-z8 mt-4">
+                <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
-        <ng-container matColumnDef="foodName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Tên sản phẩm </th>
-            <td mat-cell *matCellDef="let food"> {{food.foodName}} </td>
-        </ng-container>
+                    <ng-container matColumnDef="foodName">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Tên sản phẩm </th>
+                        <td mat-cell *matCellDef="let food"> {{food.foodName}} </td>
+                    </ng-container>
 
-        <ng-container matColumnDef="foodPrice">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Giá sản phẩm </th>
-            <td mat-cell *matCellDef="let food"> {{food.foodPrice | currency: 'VND'}} </td>
-        </ng-container>
+                    <ng-container matColumnDef="foodPrice">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Giá sản phẩm </th>
+                        <td mat-cell *matCellDef="let food"> {{food.foodPrice | currency: 'VND'}} </td>
+                    </ng-container>
 
-        <ng-container matColumnDef="foodType">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Loại sản phẩm </th>
-            <td mat-cell *matCellDef="let food"> {{food.foodType}} </td>
-        </ng-container>
+                    <ng-container matColumnDef="foodType">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Loại sản phẩm </th>
+                        <td mat-cell *matCellDef="let food"> {{food.foodType}} </td>
+                    </ng-container>
 
-        <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef class="fw-bold">Actions</th>
-            <td mat-cell *matCellDef="let food">
-                <button mat-icon-button color="primary">
-                    <mat-icon>edit</mat-icon>
-                </button>
-                <button mat-icon-button color="warn">
-                    <mat-icon>delete</mat-icon>
-                </button>
-            </td>
-        </ng-container>
+                    <ng-container matColumnDef="actions">
+                        <th mat-header-cell *matHeaderCellDef class="fw-bold">Actions</th>
+                        <td mat-cell *matCellDef="let food">
+                            <button mat-icon-button color="primary">
+                                <mat-icon>edit</mat-icon>
+                            </button>
+                            <button mat-icon-button color="warn">
+                                <mat-icon>delete</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
 
-    <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
-        aria-label="Select page of periodic elements">
-    </mat-paginator>
-</div>
+                <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
+                    aria-label="Select page of periodic elements">
+                </mat-paginator>
+            </div>
+        </mat-tab>
+
+        <mat-tab label="Thêm sản phẩm">
+            <app-add-food></app-add-food>
+        </mat-tab>
+    </mat-tab-group>
+</app-card>
