--- a/src/app/pages/food/food.component.html
+++ b/src/app/pages/food/food.component.html
@@ -4,6 +4,11 @@
             <div class="mat-elevation-z8 mt-4">
                 <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
+                    <ng-container matColumnDef="key">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> No. </th>
+                        <td mat-cell *matCellDef="let food"> {{food.key}} </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="foodName">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Tên sản phẩm </th>
                         <td mat-cell *matCellDef="let food"> {{food.foodName}} </td>
