--- a/src/app/pages/food/food.component.html
+++ b/src/app/pages/food/food.component.html
@@ -30,7 +30,7 @@
                             <button mat-icon-button color="primary">
                                 <mat-icon>edit</mat-icon>
                             </button>
-                            <button mat-icon-button color="warn">
+                            <button mat-icon-button color="warn" (click)="deleteFood(food.key)">
                                 <mat-icon>delete</mat-icon>
                             </button>
                         </td>
