--- a/src/app/pages/food/add-food/option-dialog/option-dialog.component.html
+++ b/src/app/pages/food/add-food/option-dialog/option-dialog.component.html
@@ -13,5 +13,7 @@
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Close</button>
-    <button mat-button [mat-dialog-close]="data.option" cdkFocusInitial>Add</button>
+    <button mat-button [mat-dialog-close]="data.option" cdkFocusInitial [disabled]="!isFormValid()">
+        Add
+    </button>
 </div>
