--- a/src/app/pages/food/food.component.html
+++ b/src/app/pages/food/food.component.html
@@ -27,7 +27,7 @@
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef class="fw-bold">Actions</th>
                         <td mat-cell *matCellDef="let food">
-                            <button mat-icon-button color="primary">
+                            <button mat-icon-button color="primary" (click)="openEditForm(food)">
                                 <mat-icon>edit</mat-icon>
                             </button>
                             <button mat-icon-button color="warn" (click)="deleteFood(food.key)">
