--- a/src/app/pages/food/food.component.html
+++ b/src/app/pages/food/food.component.html
@@ -24,6 +24,11 @@
                         <td mat-cell *matCellDef="let food"> {{food.foodType}} </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="shopName">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Cửa hàng </th>
+                        <td mat-cell *matCellDef="let food"> {{food.shopName}} </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef class="fw-bold">Actions</th>
                         <td mat-cell *matCellDef="let food">
