--- a/src/app/pages/food/add-food/add-option-item/add-option-item.component.html
+++ b/src/app/pages/food/add-food/add-option-item/add-option-item.component.html
@@ -19,7 +19,7 @@
                 <br />
                 <mat-form-field>
                     <mat-label>Giá Option Item</mat-label>
-                    <input matInput [(ngModel)]="data.optionItem.price">
+                    <input matInput type="number" [(ngModel)]="data.optionItem.price">
                 </mat-form-field>
                 <section class="mb-3">
                     <mat-checkbox [(ngModel)]="data.optionItem.isOutOfStock">
