--- a/src/app/pages/food/add-food/add-food.component.html
+++ b/src/app/pages/food/add-food/add-food.component.html
@@ -67,10 +67,13 @@
                 Thêm Option
             </button>
             <div class="mt-3" *ngFor="let option of options; let i = index">
-                <a class="me-1" href="javascript:" (click)="deleteOption(i)">
-                    <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
-                </a>
-                <strong class="me-1">{{ option.optionName }}: </strong>
+                <strong>{{ option.optionName }}
+                    <sup>
+                        <a class="me-1" href="javascript:" (click)="deleteOption(i)">
+                            <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
+                        </a>
+                    </sup>:
+                </strong>
                 <span *ngFor="let item of option.optionList; let index = index; let last = last">
                     <ng-template #popContent>
                         <img src="{{ item.image }}" width="150px">
@@ -80,9 +83,11 @@
                         triggers="mouseenter:mouseleave">
                         {{ item.name }}
                     </button>
-                    <a class="me-1" href="javascript:" (click)="deleteOptionItem(option, index)">
-                        <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
-                    </a>
+                    <sup>
+                        <a class="me-1" href="javascript:" (click)="deleteOptionItem(option, index)">
+                            <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
+                        </a>
+                    </sup>
                     <ng-container *ngIf="!last">, </ng-container>
                 </span>
                 <button class="ms-2" mat-button color="accent" type="button" (click)="openAddOptionItem(option)">
