--- a/src/app/pages/food/list-food/list-food.component.html
+++ b/src/app/pages/food/list-food/list-food.component.html
@@ -30,15 +30,16 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Tuỳ chọn </th>
             <td mat-cell *matCellDef="let food">
                 <div *ngIf="food.options && food.options.length > 0; else noOptionBlock">
-                    <span *ngFor="let option of food.options; let last = last">
+                    <span *ngFor="let option of food.options; let i = index; let last = last">
                         <a href="javascript:" (click)="openOptionDetails(option)">
                             {{ option.optionName }}
                         </a>
                         <sup>
-                            <a class="me-1" href="javascript:" (click)="deleteOption(food, option)">
+                            <a href="javascript:" (click)="deleteOption(food, option)">
                                 <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
                             </a>
                         </sup>
+                        (<a class="me-1" href="javascript:" (click)="openAddOptionItem(food, i)">Thêm item</a>)
                         <ng-container *ngIf="!last">, </ng-container>
                     </span>
                 </div>
@@ -75,4 +76,6 @@
     <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
         aria-label="Select page of periodic elements">
     </mat-paginator>
+
+    <mat-spinner *ngIf="addingSuccess" class="custom-spinner" diameter="50"></mat-spinner>
 </div>
