--- a/src/app/pages/food/list-food/list-food.component.html
+++ b/src/app/pages/food/list-food/list-food.component.html
@@ -31,7 +31,7 @@
             <td mat-cell *matCellDef="let food">
                 <div *ngIf="food.options && food.options.length > 0; else noOptionBlock">
                     <span *ngFor="let option of food.options; let i = index; let last = last">
-                        <a href="javascript:" (click)="openOptionDetails(option)">
+                        <a href="javascript:" (click)="openOptionDetails(food, option, i)">
                             {{ option.optionName }}
                         </a>
                         <sup>
