--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,62 +1,11 @@
-<app-card cardTitle="Danh sách cửa hàng" [options]="false">
-    <div class="mat-elevation-z8 mt-4">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+<app-card cardTitle="Quản lý cửa hàng" [options]="false">
+    <mat-tab-group>
+        <mat-tab label="Danh sách cửa hàng">
+            <app-list-shop></app-list-shop>
+        </mat-tab>
 
-            <ng-container matColumnDef="key">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> No. </th>
-                <td mat-cell *matCellDef="let shop"> {{shop.key}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="shopName">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Tên cửa hàng </th>
-                <td mat-cell *matCellDef="let shop"> {{shop.shopName}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="shopAddress">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Địa chỉ </th>
-                <td mat-cell *matCellDef="let shop"> {{shop.shopAddress}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="ratingScore">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Đánh giá </th>
-                <td mat-cell *matCellDef="let shop"> {{shop.ratingScore}}
-                    <i class="fas fa-star" style="color: #17d0d3;"></i>
-                </td>
-            </ng-container>
-
-            <ng-container matColumnDef="openingTime">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Mở cửa </th>
-                <td mat-cell *matCellDef="let shop"> {{shop.openingTime}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="closingTime">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Đóng cửa </th>
-                <td mat-cell *matCellDef="let shop"> {{shop.closingTime}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="isOpening">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Trạng thái </th>
-                <td mat-cell *matCellDef="let shop"> {{shop.isOpening ? 'Đang hoạt động' : 'Không hoạt động'}} </td>
-            </ng-container>1
-
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef class="fw-bold">Actions</th>
-                <td mat-cell *matCellDef="let shop">
-                    <button mat-icon-button color="primary">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                    <button mat-icon-button color="warn">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-
-        <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
-            aria-label="Select page of periodic elements">
-        </mat-paginator>
-    </div>
+        <mat-tab label="Thêm cửa hàng">
+            <app-add-shop></app-add-shop>
+        </mat-tab>
+    </mat-tab-group>
 </app-card>
